# kite

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  kite.cabal  readme.md
benchmarking/: generate_list.py  pythagoras  pythagoras.hs  pythagoras.kite  pythagoras.ods  pythagoras.py  sort.hs  sort.kite  sort.py
examples/: Closure.kite  Concat.kite  Conditional.kite  Euler1.kite  Euler2.kite  Euler20.kite  Fibonacci.kite  Foundation.kite  Geom.kite  Hello.kite  Increment.kite  Indexing.kite  Integration.kite  Mandelbrot.kite  Mandeltest.kite  Partial_application.kite  Pattern.kite  Plot.kite  Primes.kite  Recursive_incl_1.kite  Recursive_incl_2.kite  Recursive_incl_main.kite  Test.kite  Unitest.kite  Utils.kite  comprehension.kite  helloWorld.kite  lib.kite  modules.kite  simple_comprehension.kite  simple_parse_tree.kite  test.kite
examples/kunit/: Kunit.kite  Runner.kite
examples/project_euler/: pe2.kite
js/: kt_runtime.js
lib/: DOCS.md  Foundation.kite
presentation/: Agenda.org  Integration.kite  Length.kite  NightClub.kite  Pythagoras.kite
report/: macros.tex  noter.md  notes.md  report.tex  title.tex
report/appendices/: foundation-tests.txt
report/sections/: 0-abstract.tex  1-intro.tex  10-appen.tex  11-biblio.tex  2-probanal.tex  3-goals.tex  3-theory.tex  4-req.tex  5-design.tex  6-imp.tex  7-eval.tex  8-disc.tex  abstract.tex  acknow.tex  appendix.tex  biblio.tex  comp-design.tex  concl.tex  disc.tex  eval.tex  impl.tex  intro.tex  kite-design.tex  probanal.tex  req.tex
src/: Lexer.x  Main.hs  Parser.y
src/Kite/: Codegen.hs  Driver.hs  (+12 more)
test/: Test.hs
tests/: InferenceTest.hs  LexerTest.hs  Main.hs  ParserTest.hs  TypeCheckInternal.hs  TypeCheckTest.hs
utils/: kite-mode.el  linting-hook.sh  readme.md
visualize/: .gitignore  div_classes.py  index.html  ptree.json  ptree.txt  ptree_to_json.py
(+12 files in other folders)
