name:                kite
version:             0.1.0.0
license:             MIT
build-type:          Simple
cabal-version:       >=1.9.2

executable kite
  main-is:           Main.hs
  hs-source-dirs:    src
  build-tools:       alex, happy
  build-depends:     base ==4.6.*,
                     array ==0.4.*,
                     cmdargs ==0.10.*
