name:                kite
version:             0.0.1
build-type:          Simple
cabal-version:       >=1.9.2

source-repository    head
  type:              git
  location:          https://github.com/altschuler/kite

executable           kite
  main-is:           Kite/Main.hs
  hs-source-dirs:    src
  build-tools:       alex, happy
  build-depends:     base, array, cmdargs

test-suite           test
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    tests, src
  build-depends:     base, array, cmdargs, tasty, tasty-hunit
