name:                kite
version:             0.5.0
license:             MIT
build-type:          Simple
cabal-version:       >=1.9.2

source-repository    head
  type:              git
  location:          git@github.com:altschuler/kite.git

executable           kite
  main-is:           Main.hs
  hs-source-dirs:    src
  build-tools:       alex, happy
  build-depends:     base, array, cmdargs, pretty-show, containers, mtl, cpphs, file-embed, bytestring, filepath, directory, temporary, unix

test-suite           test
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    tests, src
  build-depends:     base, array, cmdargs, pretty-show, containers, mtl, cpphs, file-embed, bytestring, filepath, directory, unix, tasty, tasty-hunit, temporary
